--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -13,23 +13,23 @@
 
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: 'form-control'%>
   </div>
   <div class="field">
     <%= f.label :breed_id %><br>
-    <%= f.text_field :breed_id %>
+    <%= f.text_field :breed_id, class: 'form-control'%>
   </div>
   <div class="field">
     <%= f.label :owner_id %><br>
-    <%= f.text_field :owner_id %>
+    <%= f.text_field :owner_id, class: 'form-control'%>
   </div>
   <div class="field">
     <%= f.label :med_cond %><br>
-    <%= f.text_field :med_cond %>
+    <%= f.text_field :med_cond, class: 'form-control'%>
   </div>
   <div class="field">
     <%= f.label :vet %><br>
-    <%= f.text_field :vet %>
+    <%= f.text_field :vet, class: 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :dob %><br>
