--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Owners</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>First name</th>
@@ -32,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Owner', new_owner_path %>
+<%= link_to 'New Owner', new_owner_path, class: "btn btn-success" %>
