--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+</div>
+<div class="jumbotron">
+  <h1>Exotic Canine Resort</h1>
+  <p>Club Med for Furry Animals</p>
+  <p><a class="btn btn-primary btn-lg" href="" role="button">Learn more</a></p>
+</div>
+
+<!-- <p>Find me in app/views/pages/index.html.erb</p> -->
