--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#location</h1>
-<p>Find me in app/views/pages/location.html.erb</p>
+
+</div>
+<div class="jumbotron" id="locationjumbotron">
+  <h1>We're Located at 133 Quetzalcoatl Road, Dangriga, Belize</h1>
+  <p>Phone:555-555-555</p>
+  <p>Email: <a href: "dogclubmed@doggydaycare.com">dogclubmed@doggydaycare.com</a></p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
