--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -17,11 +17,11 @@
   </div>
   <div class="field">
     <%= f.label :breed_id %><br>
-    <%= f.text_field :breed_id, class: 'form-control'%>
+    <%= f.collection_select :breed_id, @breeds, :id, :breed_name, class: 'form-control'%>
   </div>
   <div class="field">
     <%= f.label :owner_id %><br>
-    <%= f.text_field :owner_id, class: 'form-control'%>
+    <%= f.collection_select :owner_id, @owners, :id, :last_name, class: 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :med_cond %><br>
