--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @dog %> |
+<%= link_to 'Show', @dog, class: "btn btn-success" %> |
 <%= link_to 'Back', dogs_path %>
