--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,8 @@
   background-size: cover;
   background-position: center;
   color:#AFBC9F;
+/*  size:80%;
+*/  padding:30px;
 }
 
 #locationjumbotron {
