--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :owner_id %><br>
-    <%= f.collection_select :owner_id, @owners, :id, :last_name, class: 'form-control' %>
+    <%= f.collection_select :owner_id, @owners, :id, :last_comma_first, class: 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :med_cond %><br>
