added paperclip gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,9 +23,9 @@
  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  color:#AFBC9F;
+  color:#70CAE1;
 /*  size:80%;
-*/  padding:30px;
+*/  padding:5%;
 }
 
 #locationjumbotron {
