--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -30,5 +30,8 @@
   <%= @dog.dob %>
 </p>
 
+<p>
+<%= image_tag @dog.avatar.url(:medium) %>
+</p>
 <%= link_to 'Edit', edit_dog_path(@dog) %> |
 <%= link_to 'Back', dogs_path %>
