--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+@import "font-awesome";
+
  body {
  	padding-top: 60px;
  }
@@ -27,6 +29,8 @@
 /*  size:80%;
 */  padding:5%;
 }
+
+
 
 #locationjumbotron {
 	background-image: image-url('beach.jpg');
