--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,36 +1,31 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Listing Dogs</h1>
 
-<table class="table table-striped table-hover">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Breed</th>
-      <th>Owner</th>
-      <th>Med cond</th>
-      <th>Vet</th>
-      <th>Dob</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row"></div>
 
-  <tbody>
-    <% @dogs.each do |dog| %>
-      <tr>
-        <td><%= dog.name %></td>
-        <td><%= dog.breed %></td>
-        <td><%= dog.owner.try(:name) %></td>
-        <td><%= dog.med_cond %></td>
-        <td><%= dog.vet %></td>
-        <td><%= dog.dob %></td>
-        <td><%= link_to 'Show', dog %></td>
-        <td><%= link_to 'Edit', edit_dog_path(dog) %></td>
-        <td><%= link_to 'Destroy', dog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<% @dogs.each do |dog| %>
+
+  <div class="col-xs-6 col-sm-4 col-md-3">
+
+    
+  <div class="panel panel-default">
+  <div class="panel-heading">
+  <h3 class="panel-title"><%= dog.name %> <%= dog.owner.try(:last_name) %></h3>
+  </div>
+  <div class="panel-body">
+    <p>
+    <%= image_tag dog.avatar.url(:medium), class: 'img-rounded img-responsive' %>
+    <%= link_to fa_icon('eye', text:'Show'), dog %>
+    <%= link_to fa_icon('pencil-square-o', text:'Edit'), edit_dog_path(dog) %>
+    <%= link_to fa_icon('bomb', text:'Delete'), dog, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </p>
+    </div>
+  </div>
+</div>
     <% end %>
-  </tbody>
-</table>
+    </div>
+
+
 
 <br>
 
