Added search boxes and filter buttons

--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -35,5 +35,7 @@
 </p>
 
 
+
+<%= link_to 'Owner', owner_path(@dog.owner_id) %>
 <%= link_to 'Edit', edit_dog_path(@dog) %> |
 <%= link_to 'Back', dogs_path %>
