--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,11 @@
   background-position: center;
   color:#70CAE1;
 /*  size:80%;
-*/  padding:5%;
+*/  padding-top:30%;
+	padding-bottom:30%;
+	padding-right:5%;
+	padding-left:5%;
+height: 100%;
 }
 
 
@@ -35,6 +39,7 @@
 #locationjumbotron {
 	background-image: image-url('beach.jpg');
 	color:#FFFFFF;
+	padding:5%;
 }
 
 #locationjumbotron a{
