added user model, required authentication for dog and owner views

--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,11 +1,13 @@
 
 <h1>Listing Dogs</h1>
 
-<div class="row"></div>
+<div class="row">
 <%= link_to "All", dogs_path, class:'btn btn-default' %>
 <% @breeds.each do |breed| %>
   <a href="?breed_id=<%= breed.id%>" class= "btn btn-default"><%=breed.breed_name%></a>
 <% end %>
+</div>
+<div class="row" id="dog_grid"></div>
 <% @dogs.each do |dog| %>
 
   <div class="col-xs-6 col-sm-4 col-md-3">
