--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,6 +1,12 @@
 
 <h1>Listing Dogs</h1>
 
+ <%= form_tag("/dogs", method: :get, role: 'search', class: 'navbar-form navbar-left') do %>
+      <div class="form-group">
+      <%= text_field_tag(:search, nil, placeholder: 'Fido', class: 'form-control input-sm') %>
+      </div>
+      <%= submit_tag('Search', class: 'btn btn-default btn-sm') %>
+      <% end  %>
 <div class="row">
 <%= link_to "All", dogs_path, class:'btn btn-default' %>
 <% @breeds.each do |breed| %>
