--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,22 +6,33 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button>
-      <%= link_to Rails.application.class.parent_name, root_url, :class => "navbar-brand" %>
+       
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <%= link_to Rails.application.class.parent_name, root_url, :class => "navbar-brand" %>
       <ul class="nav navbar-nav">
+      
         <li><%= link_to "Owners", owners_url %></li>
         <li><%= link_to "Dogs", dogs_url %></li>
-      <li><%= link_to "Location", pages_location_url %></li>
+        <li><%= link_to "Location", pages_location_url %></li>
+        
+  
+      </button>
+   
       </ul>
-      <%= form_tag("/dogs", method: :get, role: 'search', class: 'navbar-form navbar-left') do %>
-      <div class="form-group">
-      <%= text_field_tag(:search, nil, placeholder: 'Fido', class: 'form-control input-sm') %>
-      </div>
-      <%= submit_tag('Search', class: 'btn btn-default btn-sm') %>
-      <% end  %>
+
+      <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
+        <li><%= link_to 'Account', edit_user_registration_path %></li>
+        <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+      <% else %>
+        <li><%= link_to('Login', new_user_session_path)  %></li>
+        <li><%= link_to 'Register', new_user_registration_path %></li>
+      <% end %>
+    </ul>
+       
     </div><!-- /.navbar-collapse -->
   </nav>
