--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,12 +1,18 @@
 
 <h1>Listing Dogs</h1>
-
+<div class="row">
+  <div class: 'col-sm-4' 'col-sm-offset-8'>
  <%= form_tag("/dogs", method: :get, role: 'search', class: 'navbar-form navbar-left') do %>
       <div class="form-group">
       <%= text_field_tag(:search, nil, placeholder: 'Fido', class: 'form-control input-sm') %>
       </div>
       <%= submit_tag('Search', class: 'btn btn-default btn-sm') %>
       <% end  %>
+  </div>
+</div>
+
+
+<br>
       
 <div class="row">
 <%= link_to "All", dogs_path, class:'btn btn-default' %>
