--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 </div>
 <div class="jumbotron">
-  <h1>Exotic Canine Resort</h1>
-  <p>Club Med for Furry Animals</p>
+  <h1>Perro Del Mar</h1>
+  <p>A high end resort for your canine</p>
   <p><a class="btn btn-primary btn-lg" href="" role="button">Learn more</a></p>
 </div>
 
